--- a/src/components/InputField/InputField.module.css
+++ b/src/components/InputField/InputField.module.css
@@ -7,7 +7,7 @@
  */
 .input-field__overline {
   display: flex;
-  align-items: center;
+  align-items: baseline;
   margin-bottom: calc(var(--eds-spacing-size-half) * 1px);
   gap: calc(var(--eds-spacing-size-half) * 1px);
 }
